--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.5.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0"
+
     implementation 'com.google.dagger:dagger:2.25.2'
     implementation 'com.google.dagger:dagger-android:2.25.2'
     implementation 'com.google.dagger:dagger-android-support:2.25.2'
