--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="com.generalbytes.myapplication">
 
     <application
+        android:name=".DependencyInjectionApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".DependencyInjectionApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".activity.FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +17,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service android:name=".service.StickyService" />
-        <service android:name=".service.DifferentProcessService" android:process=":MyCustomProcess" />
+        <service
+            android:name=".service.DifferentProcessService"
+            android:process=":MyCustomProcess" />
+        <service
+            android:name=".service.MessengerProcessService"
+            android:process=":OtherCustomProcess" />
     </application>
 
 </manifest>
