--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
         <service android:name=".service.StickyService" />
         <service
-            android:name=".service.DifferentProcessService"
+            android:name=".service.ResultReceiverProcessService"
             android:process=":MyCustomProcess" />
         <service
             android:name=".service.MessengerProcessService"
