--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,13 +14,26 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     dataBinding {
         enabled = true
     }
     buildTypes {
-        emulaotr{
-            initWith buildTypes.release
+        emulatorOffline{
+            initWith buildTypes.debug
+            applicationIdSuffix ".emulator.offliner"
+        }
+
+        emulator{
+            initWith buildTypes.debug
             applicationIdSuffix ".emulator"
+        }
+
+        offline{
+            initWith buildTypes.debug
+            applicationIdSuffix ".offline"
         }
 
         release {
@@ -36,9 +49,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.jakewharton.timber:timber:4.5.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
@@ -54,4 +64,12 @@ dependencies {
 
     kapt 'com.google.dagger:dagger-compiler:2.25.2'
     kapt 'com.google.dagger:dagger-android-processor:2.25.2'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation "org.mockito:mockito-core:3.1.0"
+    testImplementation "org.mockito:mockito-inline:3.1.0" // enable mocking of final kotlin classed
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
