UI test example

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,6 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     androidTestImplementation "com.squareup.leakcanary:leakcanary-android-instrumentation:2.0-beta-3" // ./gradlew leakcanary-android-sample:connectedCheck
 }
