--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.tools.build:gradle:3.6.0-beta03'
         classpath 'com.github.gfx.ribbonizer:ribbonizer-plugin:2.1.0'
+        classpath 'com.karumi:shot:3.0.2'
+       // classpath 'com.facebook.testing.screenshot:plugin:0.10.0'
     }
 }
 
