--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.FirstActivity">
+        <activity android:name=".activity.SecondActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.FirstActivity" />
+        <activity android:name=".activity.ThirdActivity" />
 
         <service android:name=".service.StickyService" />
         <service android:name=".mocks.service.EmulatorStickyService" />
