--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.6.0-beta04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:3.6.0-beta03'
         classpath 'com.github.gfx.ribbonizer:ribbonizer-plugin:2.1.0'
         classpath 'com.karumi:shot:3.0.2'
-       // classpath 'com.facebook.testing.screenshot:plugin:0.10.0'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
     }
 }
 
@@ -21,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
